@@ -33,8 +33,7 @@ class StepPickingTestCase(MockBoto3TestCase):
             patch('mrjob.tools.diagnose.log'))
 
         # don't print logging messages when we start the diagnose tool
-        self.log_to_stream = self.start(
-            patch('mrjob.launch.log_to_stream'))
+        self.log_to_stream = self.start(patch('mrjob.job.log_to_stream'))
 
     def test_single_failed_step(self):
         self.mock_emr_clusters['j-MOCKCLUSTER0'] = dict(
