@@ -25,6 +25,8 @@ v0.7.0, 2019-10-?? -- fall cleaning
    * mrjob.util.read_file() and mrjob.util.read_input()
    * emr_api_params opt
    * arguments to CompositeFilesystem constructor
+   * MRJobLauncher class
+   * the `mrjob run` command
 
 v0.6.12, 2019-10-23 -- unbreak Google
  * default image_version on Dataproc is now 1.3 (#2110)
